--- a/AuthSystem/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/AuthSystem/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -26,4 +26,10 @@
 
 @section Scripts {
     @RenderSection("Scripts", required: false)
+    <style>
+        body{
+            padding:20px;
+
+        }
+    </style>
 }
