--- a/AuthSystem/Views/Shared/_Layout.cshtml
+++ b/AuthSystem/Views/Shared/_Layout.cshtml
@@ -59,6 +59,9 @@
                                     <a class="nav-link" asp-area="Identity" asp-page="/Admin/UserActivity">User Activity</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Admin/Search">Search</a>
+                                    </li>
+                                <li class="nav-item">
                                     <a id="logout" class="nav-link" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
                                 </li>
                             }
